--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "firebase": "^5.5.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-facebook": "^6.0.14",
     "react-scripts": "2.0.4"
   },
   "scripts": {
